crates/parser/tests/parse/table-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..84
  MODULE@0..81
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_TABLE@10..19
      L_PAREN@10..11 "("
      KEYWORD@11..16 "table"
      WHITESPACE@16..17 " "
      TABLE_TYPE@17..18
        LIMITS@17..18
          UNSIGNED_INT@17..18 "0"
      R_PAREN@18..19 ")"
    WHITESPACE@19..22 "\n  "
    MODULE_FIELD_TABLE@22..52
      L_PAREN@22..23 "("
      KEYWORD@23..28 "table"
      WHITESPACE@28..29 " "
      ERROR@29..30 "("
      ERROR@30..31 ")"
      WHITESPACE@31..34 "\n  "
      ERROR@34..35 "("
      ERROR@35..40 "table"
      WHITESPACE@40..41 " "
      ERROR@41..48 "funcref"
      WHITESPACE@48..49 " "
      ERROR@49..50 "("
      ERROR@50..51 ")"
      ERROR@51..52 ")"
    WHITESPACE@52..55 "\n  "
    MODULE_FIELD_TABLE@55..80
      L_PAREN@55..56 "("
      KEYWORD@56..61 "table"
      WHITESPACE@61..62 " "
      REF_TYPE@62..69
        TYPE_KEYWORD@62..69 "funcref"
      WHITESPACE@69..70 " "
      ELEM@70..79
        L_PAREN@70..71 "("
        KEYWORD@71..75 "elem"
        WHITESPACE@75..76 " "
        ERROR@76..77 "("
        ERROR@77..78 ")"
        R_PAREN@78..79 ")"
      R_PAREN@79..80 ")"
    R_PAREN@80..81 ")"
  WHITESPACE@81..82 "\n"
  ERROR@82..83 ")"
  WHITESPACE@83..84 "\n"

error: expected ref type
  ┌─ table-malformed.wat:2:11
  │
2 │   (table 0)
  │           ^

error: unexpected token
  ┌─ table-malformed.wat:3:11
  │
3 │   (table ()
  │           ^

error: unexpected token
  ┌─ table-malformed.wat:4:4
  │
4 │   (table funcref ())
  │    ^^^^^

error: unexpected token
  ┌─ table-malformed.wat:4:10
  │
4 │   (table funcref ())
  │          ^^^^^^^

error: unexpected token
  ┌─ table-malformed.wat:4:18
  │
4 │   (table funcref ())
  │                  ^

error: unexpected token
  ┌─ table-malformed.wat:4:19
  │
4 │   (table funcref ())
  │                   ^

error: unexpected token
  ┌─ table-malformed.wat:4:20
  │
4 │   (table funcref ())
  │                    ^

error: expected `)`
  ┌─ table-malformed.wat:5:3
  │
5 │   (table funcref (elem ())))
  │   ^

error: unexpected token
  ┌─ table-malformed.wat:5:25
  │
5 │   (table funcref (elem ())))
  │                         ^

error: unexpected token
  ┌─ table-malformed.wat:6:1
  │
6 │ )
  │ ^
